feat: sanitize template with placeholders (names, links, assets, metadata)

--- a/src/features/blog/content/welcome.mdx
+++ b/src/features/blog/content/welcome.mdx
@@ -1,9 +1,9 @@
 ---
-title: Welcome to chanhdai.com
-description: A minimal portfolio, component registry, and blog to showcase my work as a Design Engineer.
-image: https://assets.chanhdai.com/images/blog/welcome.webp
-createdAt: 2025-02-14
-updatedAt: 2025-07-20
+title: Welcome
+description: Placeholder post – replace with your own content.
+image: https://placehold.co/1200x630/png?text=OG+Image
+createdAt: 2025-01-01
+updatedAt: 2025-01-01
 ---
 
 ## Tech Stack
@@ -43,6 +43,6 @@ Each component is well-documented through the Blog, featuring:
 
 ## License
 
-Licensed under the [MIT license](https://github.com/ncdai/chanhdai.com/blob/main/LICENSE).
+Licensed under the MIT license.
 
-The source code is available on [GitHub](https://github.com/ncdai/chanhdai.com). You're free to use my code! Just make sure to remove all my personal information before publishing your website. It's awesome to see my code being useful to someone!
+This starter ships with placeholder content. Replace with your own text and links.
